tackle-74-end2end-github-action (#14)
* Adding documentation for the business concepts

* Tweaked a bit the Model design

* Added model documentation , included old pathfinder questionaire

* Added Quarkus scaffold

* Added objects from the OpenAPI

* Generated the images for the diagrams

* Added flow diagrams

* Modifed Use Cases diagram
Moved openapi.json file
Reformatted README

* Added the new openapi.json

* Refactored DTOs and diagram

* Added refactored new classes , added microcks file

* tuned the model
reduced the tables and entities to the first task

Signed-off-by: Jonathan Vila <jvilalop@redhat.com>

* Deleting non needed classes
Adding dependencies

Signed-off-by: Jonathan Vila <jvilalop@redhat.com>

* Get Application Assessments endpoint
added Happy and 404 tests

Signed-off-by: Jonathan Vila <jvilalop@redhat.com>

* Added create assessment and tests on get

Signed-off-by: Jonathan Vila <jvilalop@redhat.com>

* Added applicationDto

Signed-off-by: Jonathan Vila <jvilalop@redhat.com>

* Moved to plain varchar fields instead of enums
Mocked for the moment the retrieval of the user
Added deployment yaml

Signed-off-by: Jonathan Vila <jvilalop@redhat.com>

* Fixed tests and return http codes

Signed-off-by: Jonathan Vila <jvilalop@redhat.com>

* upgraded to Quarkus 12
Fixed typo on the deployment yaml
Added info to the Readme on how to use the API

Signed-off-by: Jonathan Vila <jvilalop@redhat.com>

* Added latest openapi definition to the right folder

Signed-off-by: Jonathan Vila <jvilalop@redhat.com>

* Changed dev port for the application

Signed-off-by: Jonathan Vila <jvilalop@redhat.com>

* updated openapi.json with 2 examples for the Get assessments

Signed-off-by: Jonathan Vila <jvilalop@redhat.com>

* Added NotNull to params

Signed-off-by: Jonathan Vila <jvilalop@redhat.com>

* Added tests for 400 exception

Signed-off-by: Jonathan Vila <jvilalop@redhat.com>

* A

--- a/src/main/kubernetes/tackle-pathfinder.yaml
+++ b/src/main/kubernetes/tackle-pathfinder.yaml
@@ -250,7 +250,5 @@ spec:
             timeoutSeconds: 10
           resources:
             requests:
-              memory: 0.2Gi
-            limits:
-              memory: 4Gi
-              cpu: "4"
+              memory: "100Mi"
+              cpu: "100m"
