--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,10 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-smallrye-context-propagation</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.testcontainers</groupId>
       <artifactId>postgresql</artifactId>
       <version>${testcontainers.version}</version>
@@ -188,32 +192,14 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>${surefire-plugin.version}</version>
         <configuration>
-            <excludedGroups>integration</excludedGroups>
             <systemPropertyVariables>
-                <jacoco-agent.destfile>${project.build.directory}/jacoco-ut.exec</jacoco-agent.destfile>
+                <jacoco-agent.destfile>${project.build.directory}/jacoco.exec</jacoco-agent.destfile>
                 <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                 <maven.home>${maven.home}</maven.home>
                 <keycloak.version>${keycloak.version}</keycloak.version>
-
             </systemPropertyVariables>
         </configuration>
-        <executions>
-            <execution>
-                <id>integration-tests</id>
-                <phase>integration-test</phase>
-                <goals>
-                    <goal>test</goal>
-                </goals>
-                <configuration>
-                    <excludedGroups>!integration</excludedGroups>
-                    <groups>integration</groups>
-                    <systemPropertyVariables>
-                        <jacoco-agent.destfile>${project.build.directory}/jacoco-it.exec</jacoco-agent.destfile>
-                    </systemPropertyVariables>
-                </configuration>
-            </execution>
-        </executions>
-      </plugin>
+    </plugin>
     </plugins>
   </build>
   <profiles>
@@ -279,66 +265,11 @@
                         <goal>report</goal>
                     </goals>
                     <configuration>
-                        <dataFile>${project.build.directory}/jacoco-ut.exec</dataFile>
-                        <outputDirectory>${project.reporting.outputDirectory}/jacoco-ut</outputDirectory>
-                    </configuration>
-                </execution>
-                <execution>
-                    <id>instrument-it</id>
-                    <phase>pre-integration-test</phase>
-                    <goals>
-                        <goal>instrument</goal>
-                    </goals>
-                </execution>
-                <execution>
-                    <id>restore-it</id>
-                    <phase>post-integration-test</phase>
-                    <goals>
-                        <goal>restore-instrumented-classes</goal>
-                    </goals>
-                </execution>
-                <execution>
-                    <id>report-it</id>
-                    <phase>post-integration-test</phase>
-                    <goals>
-                        <goal>report</goal>
-                    </goals>
-                    <configuration>
-                        <dataFile>${project.build.directory}/jacoco-it.exec</dataFile>
-                        <outputDirectory>${project.reporting.outputDirectory}/jacoco-it</outputDirectory>
-                    </configuration>
-                </execution>
-                <execution>
-                    <id>merge-results</id>
-                    <phase>verify</phase>
-                    <goals>
-                        <goal>merge</goal>
-                    </goals>
-                    <configuration>
-                        <fileSets>
-                            <fileSet>
-                                <directory>${project.build.directory}</directory>
-                                <includes>
-                                    <include>*.exec</include>
-                                </includes>
-                            </fileSet>
-                        </fileSets>
-                        <destFile>${project.build.directory}/jacoco.exec</destFile>
-                    </configuration>
-                </execution>
-                <execution>
-                    <id>post-merge-report</id>
-                    <phase>verify</phase>
-                    <goals>
-                        <goal>report</goal>
-                    </goals>
-                    <configuration>
-                        <dataFile>${project.build.directory}/jacoco.exec</dataFile>
-                        <outputDirectory>${project.reporting.outputDirectory}/jacoco</outputDirectory>
+                        <outputDirectory>${project.reporting.outputDirectory}/jacoco-reports</outputDirectory>
                     </configuration>
                 </execution>
             </executions>
-        </plugin>
+          </plugin>
         </plugins>
       </build>
     </profile>
