Renamed the github action to minikube
Signed-off-by: Jonathan Vila <jvilalop@redhat.com>

--- a/.github/workflows/test-minikube.yaml
+++ b/.github/workflows/test-minikube.yaml
@@ -5,7 +5,7 @@ on:
     branches: [ main ]
 
 jobs:
-  microcks-api-validation:
+  minikube-api-validation:
     runs-on: ubuntu-latest
 
     steps:
