--- a/pom.xml
+++ b/pom.xml
@@ -166,6 +166,11 @@
       <scope>test</scope>
       <version>${jacoco.version}</version>
   </dependency>
+  <dependency>
+    <groupId>io.quarkus</groupId>
+    <artifactId>quarkus-panache-mock</artifactId>
+    <scope>test</scope>
+  </dependency>
   </dependencies>
   <build>
     <plugins>
