--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -45,11 +45,11 @@ quarkus.openshift.labels."app.kubernetes.io/component"=rest
 # ------ TEST
 %test.quarkus.flyway.locations=db/migration,db/test-data
 %test.quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/pathfinder_db
-#%test.quarkus.log.category."org.hibernate.type.descriptor.sql.BasicBinder".min-level=FINER
-#%test.quarkus.log.category."org.hibernate.type.descriptor.sql.BasicBinder".level#=FINER
+%test.quarkus.log.category."org.hibernate.type.descriptor.sql.BasicBinder".min-level=FINER
+%test.quarkus.log.category."org.hibernate.type.descriptor.sql.BasicBinder".level#=FINER
 %test.quarkus.log.level=INFO
-%test.quarkus.hibernate-orm.log.sql=false
-%test.quarkus.hibernate-orm.log.bind-parameters=false
+%test.quarkus.hibernate-orm.log.sql=true
+%test.quarkus.hibernate-orm.log.bind-parameters=true
 
 # ------- DEV
 %dev.quarkus.flyway.migrate-at-start=true
