Creating async operation of BulkCreate
Signed-off-by: Jonathan Vila <jvilalop@redhat.com>

--- a/pom.xml
+++ b/pom.xml
@@ -165,12 +165,18 @@
       <classifier>runtime</classifier>
       <scope>test</scope>
       <version>${jacoco.version}</version>
-  </dependency>
-  <dependency>
-    <groupId>io.quarkus</groupId>
-    <artifactId>quarkus-panache-mock</artifactId>
-    <scope>test</scope>
-  </dependency>
+    </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-panache-mock</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.awaitility</groupId>
+      <artifactId>awaitility</artifactId>
+      <version>4.0.3</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
