Changing the approach to EventBus
Signed-off-by: Jonathan Vila <jvilalop@redhat.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -45,8 +45,8 @@ quarkus.openshift.labels."app.kubernetes.io/component"=rest
 # ------ TEST
 %test.quarkus.flyway.locations=db/migration,db/test-data
 %test.quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/pathfinder_db
-#%test.quarkus.log.category."org.hibernate.type.descriptor.sql.BasicBinder".min-level=FINER
-#%test.quarkus.log.category."org.hibernate.type.descriptor.sql.BasicBinder".level=FINER
+%test.quarkus.log.category."org.hibernate.type.descriptor.sql.BasicBinder".min-level=FINER
+%test.quarkus.log.category."org.hibernate.type.descriptor.sql.BasicBinder".level=FINER
 %test.quarkus.log.level=INFO
 %test.quarkus.hibernate-orm.log.sql=false
 %test.quarkus.hibernate-orm.log.bind-parameters=false
@@ -55,10 +55,10 @@ quarkus.openshift.labels."app.kubernetes.io/component"=rest
 %dev.quarkus.flyway.migrate-at-start=true
 %dev.quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5433/pathfinder_db
 # bind-parameters (BasicBinder) is at TRACE so min-level must be configured properly
-%dev.quarkus.log.category."org.hibernate.type.descriptor.sql.BasicBinder".min-level=FINER
-%dev.quarkus.log.category."org.hibernate.type.descriptor.sql.BasicBinder".level=FINER
+#%dev.quarkus.log.category."org.hibernate.type.descriptor.sql.BasicBinder".min-level=FINER
+#%dev.quarkus.log.category."org.hibernate.type.descriptor.sql.BasicBinder".level=FINER
 %dev.quarkus.oidc.auth-server-url=https://localhost:8543/auth/realms/quarkus
-%dev.quarkus.log.level=FINE
+%dev.quarkus.log.level=INFO
 %dev.quarkus.http.port=8085
 %dev.quarkus.hibernate-orm.database.generation=none
 
