--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -61,6 +61,9 @@ quarkus.openshift.labels."app.kubernetes.io/component"=rest
 %dev.quarkus.log.level=INFO
 %dev.quarkus.http.port=8085
 %dev.quarkus.hibernate-orm.database.generation=none
+%dev.quarkus.hibernate-orm.log.sql=false
+%dev.quarkus.hibernate-orm.log.bind-parameters=true
+
 
 
 # -------- Extra profiles
