--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,6 +39,20 @@ quarkus.openshift.part-of=${quarkus.kubernetes.part-of}
 quarkus.kubernetes.labels."app.kubernetes.io/component"=rest
 quarkus.openshift.labels."app.kubernetes.io/component"=rest
 
+# Service
+confidence.risk.RED.weight=1
+confidence.risk.AMBER.weight=800
+confidence.risk.GREEN.weight=1000
+confidence.risk.UNKNOWN.weight=700
+
+confidence.risk.RED.multiplier=0.6
+confidence.risk.AMBER.multiplier=0.95
+
+confidence.risk.AMBER.adjuster=0.98
+confidence.risk.UNKNOWN.adjuster=1.0
+confidence.risk.RED.adjuster=0.5
+confidence.risk.GREEN.adjuster=1.0
+
 # ----- PROD
 %prod.quarkus.hibernate-orm.log.sql=false
 
@@ -61,6 +75,8 @@ quarkus.openshift.labels."app.kubernetes.io/component"=rest
 %dev.quarkus.log.level=FINE
 %dev.quarkus.http.port=8085
 %dev.quarkus.hibernate-orm.database.generation=none
+
+
 
 
 # -------- Extra profiles
