--- a/.github/workflows/test-minikube.yaml
+++ b/.github/workflows/test-minikube.yaml
@@ -10,15 +10,15 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v1
+        uses: actions/checkout@v2.0.0
       - name: Setup Minikube
-        uses: manusa/actions-setup-minikube@v2.3.1
+        uses: manusa/actions-setup-minikube@v2.4.2
         with:
-          minikube version: 'v1.16.0'
-          kubernetes version: 'v1.19.2'
+          minikube version: v1.21.0
+          kubernetes version: 'v1.21.0'
           github token: ${{ secrets.GITHUB_TOKEN }}
           driver: docker
-          start args: '--addons=registry --addons=ingress --cpus 2 --memory 6000'
+          start args: ' --force --addons=ingress --cpus 2 --memory 6000'
       - name: Get minikube IP
         id: getMinikubeIp
         run: echo "::set-output name=value::$(minikube ip)"
@@ -38,11 +38,10 @@ jobs:
             -Dquarkus.container-image.build=true \
             -Dquarkus.container-image.group=${{ github.repository_owner }} \
             -Dquarkus.container-image.additional-tags=latest-jar \
-            -Dquarkus.container-image.tag=0.0.1-SNAPSHOT-native \
+            -Dquarkus.container-image.tag=gh-test \
             -Dquarkus.container-image.registry=quay.io \
             -Dquarkus.native.container-build=true
-          minikube cache add quay.io/${{ github.repository_owner }}/tackle-pathfinder:0.0.1-SNAPSHOT-native
-          minikube cache list
+          minikube image load quay.io/${{ github.repository_owner }}/tackle-pathfinder:gh-test
       - name: Check during max 2 minutes to allow Minikube ingress to be ready
         timeout-minutes: 2
         run: |
