--- a/.github/workflows/test-minikube.yaml
+++ b/.github/workflows/test-minikube.yaml
@@ -45,7 +45,7 @@ jobs:
       - name: Check during max 2 minutes to allow Minikube ingress to be ready
         timeout-minutes: 2
         run: |
-          while [[ ! "$(kubectl rollout status deployment ingress-nginx-controller -n kube-system)" =~ "successfully" ]]; do
+          while [[ ! "$(kubectl rollout status deployment ingress-nginx-controller -n ingress-nginx)" =~ "successfully" ]]; do
             sleep 15
           done
       - name: Deploy Pathfinder on minikube
