Updated the openapi.json

--- a/.github/workflows/test-minikube.yaml
+++ b/.github/workflows/test-minikube.yaml
@@ -64,6 +64,7 @@ jobs:
         run: |
           while [[ ! "$(kubectl rollout status deployment tackle-pathfinder -n tackle)" =~ "successfully" ]]; do
             sleep 15
+            kubectl get pods -n tackle
           done
       - name: Print status on Minikube
         run : |
