--- a/.github/workflows/test-minikube.yaml
+++ b/.github/workflows/test-minikube.yaml
@@ -53,7 +53,9 @@ jobs:
           set -x
           kubectl create namespace tackle
           kubectl apply -f src/test/resources/test-deployment.yaml -n tackle
-          sed 's/imagePullPolicy: Always/imagePullPolicy: Never/g' src/main/kubernetes/tackle-pathfinder.yaml | kubectl apply -n tackle -f -
+          sed -e 's/imagePullPolicy: Always/imagePullPolicy: Never/g' \
+              -e 's/image: quay.io\/konveyor\/tackle-pathfinder:0.0.1-SNAPSHOT-native/image: quay.io\/${{ github.repository_owner }}\/tackle-pathfinder:gh-test/g' \
+              src/main/kubernetes/tackle-pathfinder.yaml | kubectl apply -n tackle -f -
       - name: Print status on Minikube
         run : |
           set -x
