--- a/.github/workflows/test-minikube.yaml
+++ b/.github/workflows/test-minikube.yaml
@@ -18,7 +18,7 @@ jobs:
           kubernetes version: 'v1.21.0'
           github token: ${{ secrets.GITHUB_TOKEN }}
           driver: docker
-          start args: ' --force --addons=ingress --cpus 2 --memory 6000'
+          start args: ' --addons=ingress --cpus 2 --memory 6000'
       - name: Get minikube IP
         id: getMinikubeIp
         run: echo "::set-output name=value::$(minikube ip)"
@@ -65,8 +65,6 @@ jobs:
         run: |
           set -x
           sleep 300
-          kubectl get pods -n tackle
-          kubectl rollout status deployment tackle-pathfinder -n tackle
           while [[ ! "$(kubectl rollout status deployment tackle-pathfinder -n tackle)" =~ "successfully" ]]; do
             sleep 15
           done
