--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -59,8 +59,8 @@ confidence.risk.GREEN.adjuster=1.0
 # ------ TEST
 %test.quarkus.flyway.locations=db/migration,db/test-data
 %test.quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/pathfinder_db
-%test.quarkus.log.category."org.hibernate.type.descriptor.sql.BasicBinder".min-level=FINER
-%test.quarkus.log.category."org.hibernate.type.descriptor.sql.BasicBinder".level=FINER
+#%test.quarkus.log.category."org.hibernate.type.descriptor.sql.BasicBinder".min-level=FINER
+#%test.quarkus.log.category."org.hibernate.type.descriptor.sql.BasicBinder".level=FINER
 %test.quarkus.log.level=INFO
 %test.quarkus.hibernate-orm.log.sql=false
 %test.quarkus.hibernate-orm.log.bind-parameters=false
@@ -69,8 +69,8 @@ confidence.risk.GREEN.adjuster=1.0
 %dev.quarkus.flyway.migrate-at-start=true
 %dev.quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5433/pathfinder_db
 # bind-parameters (BasicBinder) is at TRACE so min-level must be configured properly
-#%dev.quarkus.log.category."org.hibernate.type.descriptor.sql.BasicBinder".min-level=FINER
-#%dev.quarkus.log.category."org.hibernate.type.descriptor.sql.BasicBinder".level=FINER
+%dev.quarkus.log.category."org.hibernate.type.descriptor.sql.BasicBinder".min-level=FINER
+%dev.quarkus.log.category."org.hibernate.type.descriptor.sql.BasicBinder".level=FINER
 %dev.quarkus.oidc.auth-server-url=https://localhost:8543/auth/realms/quarkus
 %dev.quarkus.log.level=INFO
 %dev.quarkus.http.port=8085
