tackle-130-bulk-copy-application-assessment (#42)
* Added questionnaire entity

Signed-off-by: Jonathan Vila <jvilalop@redhat.com>

* Added entities and flyway instructions

Signed-off-by: Jonathan Vila <jvilalop@redhat.com>

* Added entities and flyway files

Signed-off-by: Jonathan Vila <jvilalop@redhat.com>

* Deleted template tables and domains as we are adopting Entity first approach

Signed-off-by: Jonathan Vila <jvilalop@redhat.com>

* Refined the entities and DDL

Signed-off-by: Jonathan Vila <jvilalop@redhat.com>

* Changes on the entities

Signed-off-by: Jonathan Vila <jvilalop@redhat.com>

* Fixed entities
Created test for the structure copy

Signed-off-by: Jonathan Vila <jvilalop@redhat.com>

* Created Script for the default questionnaire ( old pathfinder )

Signed-off-by: Jonathan Vila <jvilalop@redhat.com>

* Reordered sql scripts

Signed-off-by: Jonathan Vila <jvilalop@redhat.com>

* Refined entities

Signed-off-by: Jonathan Vila <jvilalop@redhat.com>

* Refined tests with modified entities and added Copy Questionnaire test

Signed-off-by: Jonathan Vila <jvilalop@redhat.com>

* Copied AbstractEntity to modify behaviour
Modified flyway scripts to have the default false to boolean

Signed-off-by: Jonathan Vila <jvilalop@redhat.com>

* Added AbstractEntity

Signed-off-by: Jonathan Vila <jvilalop@redhat.com>

* Fixed typo on sql

Signed-off-by: Jonathan Vila <jvilalop@redhat.com>

* typo on ddl script

Signed-off-by: Jonathan Vila <jvilalop@redhat.com>

* debug

Signed-off-by: Jonathan Vila <jvilalop@redhat.com>

* debug

Signed-off-by: Jonathan Vila <jvilalop@redhat.com>

* Simplified jacoco usage

Signed-off-by: Jonathan Vila <jvilalop@redhat.com>

* Fixed test and pom for keycloak

Signed-off-by: Jonathan Vila <jvilalop@redhat.com>

* debug

Signed-off-by: Jonathan Vila <jvilalop@redhat.com>

* Re-fined test of copy questionnaire

Signed-off-by: Jonathan Vila <jvilalop@

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -72,9 +72,12 @@ confidence.risk.GREEN.adjuster=1.0
 %dev.quarkus.log.category."org.hibernate.type.descriptor.sql.BasicBinder".min-level=FINER
 %dev.quarkus.log.category."org.hibernate.type.descriptor.sql.BasicBinder".level=FINER
 %dev.quarkus.oidc.auth-server-url=https://localhost:8543/auth/realms/quarkus
-%dev.quarkus.log.level=FINE
+%dev.quarkus.log.level=INFO
 %dev.quarkus.http.port=8085
 %dev.quarkus.hibernate-orm.database.generation=none
+%dev.quarkus.hibernate-orm.log.sql=false
+%dev.quarkus.hibernate-orm.log.bind-parameters=true
+
 
 
 
