--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -12,9 +12,11 @@ jobs:
     steps:
     - uses: actions/checkout@v2.3.4
     - name: Set up JDK 11
-      uses: actions/setup-java@v1
+      uses: actions/setup-java@v2
       with:
-        java-version: 11
+        java-version: '11'
+        distribution: 'adopt'
+        java-package: jdk
     - name: Cache Maven packages
       uses: actions/cache@v2.1.6
       with:
@@ -31,9 +33,11 @@ jobs:
     steps:
     - uses: actions/checkout@v2.3.4
     - name: Set up JDK 11
-      uses: actions/setup-java@v1
+      uses: actions/setup-java@v2
       with:
-        java-version: 11
+        java-version: '11'
+        distribution: 'adopt'
+        java-package: jdk
     - name: Cache Maven packages
       uses: actions/cache@v2.1.6
       with:
@@ -52,9 +56,11 @@ jobs:
     steps:
     - uses: actions/checkout@v2.3.4
     - name: Set up JDK 11
-      uses: actions/setup-java@v1
+      uses: actions/setup-java@v2
       with:
-        java-version: 11
+        java-version: '11'
+        distribution: 'adopt'
+        java-package: jdk
     - name: Cache Maven packages
       uses: actions/cache@v2.1.6
       with:
@@ -82,9 +88,11 @@ jobs:
     steps:
     - uses: actions/checkout@v2.3.4
     - name: Set up JDK 11
-      uses: actions/setup-java@v1
+      uses: actions/setup-java@v2
       with:
-        java-version: 11
+        java-version: '11'
+        distribution: 'adopt'
+        java-package: jdk
     - name: Cache Maven packages
       uses: actions/cache@v2.1.6
       with:
@@ -109,9 +117,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2.3.4
       - name: Set up JDK 11
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v2
         with:
-          java-version: 11
+          java-version: '11'
+          distribution: 'adopt'
+          java-package: jdk
       - name: Cache Maven packages
         uses: actions/cache@v2.1.6
         with:
