--- a/.github/workflows/pr-regresion-tests.yml
+++ b/.github/workflows/pr-regresion-tests.yml
@@ -2,6 +2,8 @@ name: Regresion tests
 
 on:
   push:
+    branches-ignore:
+      - "dependabot/**"
     paths-ignore:
       - ".gitignore"
       - "LICENSE"
@@ -15,11 +17,8 @@ on:
       - ".github/ISSUE_TEMPLATE/**"
 
 jobs:
-  ks8:
+  native-image:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        browser: [chrome]
     steps:
       - name: Checkout tackle-pathfinder
         uses: actions/checkout@v2
@@ -34,11 +33,34 @@ jobs:
       - name: Build container image
         run: |
           mvn -U -B package --file tackle-pathfinder/pom.xml \
-          -Pnative -Dquarkus.container-image.build=true -DskipTests \
+          -Pcontainer-image -Pnative -DskipTests \
           -Dquarkus.container-image.push=false \
           -Dquarkus.container-image.group=tackle \
           -Dquarkus.container-image.name=tackle-pathfinder \
-          -Dquarkus.container-image.tag=current-pr
+          -Dquarkus.container-image.tag=current-pr \
+          -Dquarkus.native.container-build=true
+      - name: Save container image
+        run: docker save -o tackle-pathfinder.tar tackle/tackle-pathfinder:current-pr
+      - name: Upload container image
+        uses: actions/upload-artifact@v2
+        with:
+          name: tackle-pathfinder
+          path: tackle-pathfinder.tar
+
+  ks8:
+    runs-on: ubuntu-latest
+    needs: [ native-image ]
+    strategy:
+      matrix:
+        tier: [ "@tier1", "@tier2", "@tier3" ]
+    steps:
+      - name: Download container image
+        uses: actions/download-artifact@v2
+        with:
+          name: tackle-pathfinder
+          path: .
+      - name: Load container image
+        run: docker load -i tackle-pathfinder.tar
 
       - name: Checkout tackle
         uses: actions/checkout@v2
@@ -72,8 +94,8 @@ jobs:
         run: kubectl wait deployment/keycloak --for condition=available --timeout=-1s -n tackle
       - name: Verify tackle-controls
         run: kubectl wait deployment/tackle-controls --for condition=available --timeout=-1s -n tackle
-      - name: Verify tackle-application-inventory
-        run: kubectl wait deployment/tackle-application-inventory --for condition=available --timeout=-1s -n tackle
+      - name: Verify tackle-pathfinder
+        run: kubectl wait deployment/tackle-pathfinder --for condition=available --timeout=-1s -n tackle
       - name: Verify tackle-pathfinder
         run: kubectl wait deployment/tackle-pathfinder --for condition=available --timeout=-1s -n tackle
       - name: Verify tackle-ui
@@ -104,9 +126,17 @@ jobs:
           working-directory: tackle-ui-tests
           record: false
           start: npx echo "Starting Minikube Cypress tests"
-          config: pageLoadTimeout=100000,retries=2
-          browser: ${{ matrix.browser }}
+          config: pageLoadTimeout=100000,retries=2,video=false
+          browser: chrome
+          spec: |
+            **/*.test.ts
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CYPRESS_user: tackle
           CYPRESS_pass: password
+          CYPRESS_grepTags: ${{ matrix.tier }}
+      - uses: actions/upload-artifact@v1
+        if: failure()
+        with:
+          name: integration-tests-screenshots
+          path: tackle-ui-tests/cypress/screenshots
