--- a/.github/workflows/pr-regresion-tests.yml
+++ b/.github/workflows/pr-regresion-tests.yml
@@ -17,7 +17,7 @@ on:
       - ".github/ISSUE_TEMPLATE/**"
 
 jobs:
-  native-image:
+  container-image:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout tackle-pathfinder
@@ -49,7 +49,7 @@ jobs:
 
   ks8:
     runs-on: ubuntu-latest
-    needs: [ native-image ]
+    needs: [ container-image ]
     strategy:
       matrix:
         tier: [ "@tier1", "@tier2", "@tier3" ]
