--- a/.github/workflows/pr-regresion-tests.yml
+++ b/.github/workflows/pr-regresion-tests.yml
@@ -52,6 +52,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [ container-image ]
     strategy:
+      fail-fast: false
       matrix:
         tier: [ "@tier1", "@tier2", "@tier3" ]
     steps:
