--- a/.github/workflows/pr-regresion-tests.yml
+++ b/.github/workflows/pr-regresion-tests.yml
@@ -74,6 +74,7 @@ jobs:
         with:
           repository: konveyor/tackle-ui-tests
           path: tackle-ui-tests
+          ref: dev
       - name: Setup Minikube
         uses: manusa/actions-setup-minikube@v2.3.1
         with:
