--- a/.github/workflows/pr-regresion-tests.yml
+++ b/.github/workflows/pr-regresion-tests.yml
@@ -125,7 +125,9 @@ jobs:
 
       - name: Cypress run
         run: |
-          cd tackle-ui-tests && npx cypress run --spec **/*.test.ts --env grepTags=${{ matrix.tier }},user=tackle,pass=password,tackleUrl=${{ env.CYPRESS_tackleUrl }}
+          cd tackle-ui-tests
+          npm install .
+          npx cypress run --spec **/*.test.ts --env grepTags=${{ matrix.tier }},user=tackle,pass=password,tackleUrl=${{ env.CYPRESS_tackleUrl }}
       - uses: actions/upload-artifact@v1
         if: failure()
         with:
