Add RBAC definitions to application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ quarkus.http.root-path = /pathfinder
 # requested to have the prototype html page to work
 quarkus.http.cors=true
 
+quarkus.http.auth.policy.admin-policy.roles-allowed=admin
 quarkus.http.auth.policy.assessment-read-policy.roles-allowed=pathfinder:assessment:read
 quarkus.http.auth.policy.assessment-write-policy.roles-allowed=pathfinder:assessment:write
 
@@ -22,6 +23,9 @@ quarkus.http.auth.permission.assessment-write.policy=assessment-write-policy
 # 'q' endpoints must be permitted (e.g. the /q/metrics and /q/health endpoints)
 quarkus.http.auth.permission.permit1.paths=/pathfinder/q/*
 quarkus.http.auth.permission.permit1.policy=permit
+
+quarkus.http.auth.permission.remaining-endpoints.paths=/pathfinder/*
+quarkus.http.auth.permission.remaining-endpoints.policy=admin-policy
 
 # Flyway
 quarkus.flyway.migrate-at-start=true
