--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,6 +32,8 @@ quarkus.oidc.auth-server-url=http://keycloak:8080/auth/realms/quarkus
 quarkus.oidc.client-id=backend-service
 quarkus.oidc.credentials.secret=secret
 quarkus.oidc.tls.verification=none
+quarkus.oidc.discovery-enabled=false
+quarkus.oidc.jwks-path=protocol/openid-connect/certs
 
 # Kubernetes / Openshift
 quarkus.kubernetes.part-of=tackle
