Upgrade commons-rest version

--- a/pom.xml
+++ b/pom.xml
@@ -103,14 +103,14 @@
       <version>${mapstruct.version}</version>
     </dependency>
     <dependency>
-      <groupId>io.tackle</groupId>
+      <groupId>com.github.konveyor.tackle-commons-rest</groupId>
       <artifactId>commons-rest</artifactId>
-      <version>0.0.1-SNAPSHOT</version>
+      <version>0.0.2</version>
     </dependency>
     <dependency>
-      <groupId>io.tackle</groupId>
+      <groupId>com.github.konveyor.tackle-commons-rest</groupId>
       <artifactId>commons-rest-test</artifactId>
-      <version>0.0.1-SNAPSHOT</version>
+      <version>0.0.2</version>
       <scope>test</scope>
     </dependency>
     <dependency>
