--- a/pom.xml
+++ b/pom.xml
@@ -164,6 +164,10 @@
       <artifactId>quarkus-keycloak-authorization</artifactId>
     </dependency>
     <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-security</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.jacoco</groupId>
       <artifactId>org.jacoco.agent</artifactId>
       <classifier>runtime</classifier>
