--- a/.github/workflows/test-minikube.yaml
+++ b/.github/workflows/test-minikube.yaml
@@ -90,8 +90,9 @@ jobs:
           while [ -z $external_ip ];
             do echo "Waiting for end point...";
             external_ip=$(kubectl get ingress tackle --template="{{range .status.loadBalancer.ingress}}{{.ip}}{{end}}" -n tackle);[ -z "$external_ip" ] &&
-            sleep 30;
+            sleep 10;
           done;
+          sleep 30 &&
           echo "End point ready:" &&
           echo $external_ip;'
 
