--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,8 @@
-name: Tackle Pathfinder CI main
+name: Tackle Pathfinder CI
 
 on:
+  pull_request:
+    branches: [ main ]
   push:
     branches: [ main ]
 
@@ -10,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2.3.5
+    - uses: actions/checkout@v3.2.0
     - name: Set up JDK 11
       uses: actions/setup-java@v2
       with:
@@ -31,7 +33,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2.3.5
+    - uses: actions/checkout@v3.2.0
     - name: Set up JDK 11
       uses: actions/setup-java@v2
       with:
@@ -51,7 +53,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2.3.5
+      - uses: actions/checkout@v3.2.0
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
@@ -70,3 +72,25 @@ jobs:
         with:
           file: ./target/site/jacoco/jacoco.xml
           name: codecov
+
+  build-for-global-ci:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3.2.0
+      - name: save tackle-pathfinder image
+        run: |
+          docker build -f src/main/docker/Dockerfile.native-multi-stage . -t quay.io/konveyor/tackle-pathfinder:1.3.0-native
+          docker save -o /tmp/tackle-pathfinder.tar quay.io/konveyor/tackle-pathfinder:1.3.0-native
+
+      - name: Upload tackle-pathfinder image as artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: tackle-pathfinder
+          path: /tmp/tackle-pathfinder.tar
+          retention-days: 1
+
+  test-integration:
+    needs: build-for-global-ci
+    uses: konveyor/ci/.github/workflows/global-ci.yml@main
+    with:
+      component_name: tackle-pathfinder
